--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 	outline: none;
 	border: none;
 	text-decoration: none;
-	transition: all 0.2s linear;
+	/* transition: all 0.2s linear; */
 }
 
 html {
