--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,18 @@ html {
 	overflow-x: hidden;
 }
 
+html::-webkit-scrollbar {
+	width: 1rem;
+}
+
+html::-webkit-scrollbar-track {
+	background: transparent;
+}
+
+html::-webkit-scrollbar-thumb {
+	background: #0eb582;
+}
+
 section {
 	padding: 5rem 10%;
 }
