--- a/src/Components/Courses.css
+++ b/src/Components/Courses.css
@@ -1,3 +1,25 @@
 .AllCources .heading {
 	justify-content: center !important;
 }
+
+.NewCoursesSection .NewCourses {
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
+	gap: 2rem;
+	place-items: center;
+	align-content: center;
+	align-items: start;
+	justify-items: stretch;
+}
+
+.NewCoursesSection .heading {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding: 0 0 3rem 0;
+}
+
+.NewCoursesSection .heading h1 {
+	color: #0eb582;
+	font-size: 4rem;
+}
