--- a/src/Components/Teacher.css
+++ b/src/Components/Teacher.css
@@ -15,10 +15,11 @@
 
 .teacher .teacherImage .teacherName {
 	position: absolute;
-	bottom: 5rem;
+	bottom: 3rem;
 	left: 50%;
 	transform: translate(-50%);
-	font-size: 2.2rem;
+	font-size: 1.5rem;
+	text-align: center;
 	background: #f0fdfa;
 	color: #444;
 	border: 1px solid #0eb582;
