--- a/src/Components/Hero.css
+++ b/src/Components/Hero.css
@@ -32,9 +32,15 @@
 }
 
 .hero .rHero {
-	width: 52rem;
+	max-width: 50rem;
 	height: auto;
-	object-fit: contain;
+	overflow: hidden;
+}
+
+.hero .rHero img {
+	height: 100%;
+	width: 100%;
+	object-fit: cover;
 }
 
 @media (max-width: 991px) {
